syntax = "proto3";
package hangmancfg;

service UserManager {
    rpc AddUser (UserDataRequest) returns (RowsAffectedReply);
    rpc IsAuthValid (CredentialsRequest) returns (IsSuccessReply);
    rpc DeleteUserById (UserIdRequest) returns (RowsAffectedReply);
    rpc GetUserByUsername (UsernameRequest) returns (UserDataReply);
}

message UserDataRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RowsAffectedReply {
    uint64 rows_affected = 1;
}

message CredentialsRequest {
    string username = 1;
    string password = 2;
}

message IsSuccessReply {
    bool is_success = 1;
}

message UserIdRequest {
    int32 user_id = 1;
}

message UsernameRequest {
    string username = 1;
}

message UserDataReply {
    int32 user_id = 1;
    string username = 2;
    string email = 3;
}